# roadmapper

./: Dockerfile  GNUmakefile  LICENSE  README.md  pyproject.toml  requirements.txt  roadmaps.yaml
.github/workflows/: roadmap.yaml
output/: roadmapper.dot  stoneboard.dot
src/: app.py
