[tool.poetry]
name = "roadmapper"
version = "0.1.0"
description = "Generate graphviz roadmaps from github milestones"
authors = ["afirth <afirth@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
PyYAML = "^6.0"
simplejson = "^3.17.6"
ConfigArgParse = "^1.5.3"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
